# python-samples

./: .gitignore  pyproject.toml  qt6-example.py  readme.md  tkinter-example.py
LeetCode/: DeleteNodeInBST.py  LongestSubstringWithoutRepeatingCharacters.py  MakeSumDivisibleByP.py  PhoneNumbers.py  StringCompression.py  SubarraySumsDivisibleByK.py  TwoPointers.py  utils.py
algorithms/: binary_search.py  breadth_first_search.py  depth_first_search.py  dijkstra.py  fibo.py  greedy.py  invert.py  node.py  prefix_sum.py  selection_sort.py  two_pointers.py
aoc2025/: day3.py  day6.py
data-analysis/: database_queries.py  psycopg2-example.py  search.py  utilities.py
data-sources/: alpha-vantage.py  file_handling.py  (+1 more)
python-architecture-demo/portfolio-api/: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
python-architecture-demo/portfolio-api/app/: config.py  database.py  main.py
python-architecture-demo/portfolio-api/app/api/: health.py  portfolios.py
python-architecture-demo/portfolio-api/app/application/portfolios/create/: command.py  response.py
python-architecture-demo/portfolio-api/app/domain/portfolio/: entity.py  exceptions.py  portfolio.py  position.py  repository.py
python-architecture-demo/portfolio-api/app/features/health/: routes.py  schemas.py  service.py
python-architecture-demo/portfolio-api/app/features/portfolios/: models.py  portfolio_repository.py  portfolios.py  routes.py  schemas.py  service.py  services.py
python-architecture-demo/portfolio-api/app/features/portfolios/create/: commands.py  handler.py
python-architecture-demo/portfolio-api/app/features/portfolios/models/: portfolio.py  position.py
python-architecture-demo/portfolio-api/app/features/users/: models.py  routes.py  schemas.py  services.py
python-architecture-demo/portfolio-api/app/infrastructure/: database.py  logging.py  runtime.py  tracing.py
python-architecture-demo/portfolio-api/app/infrastructure/postgres/: models.py  portfolio_repository.py
(+132 files in other folders)
