[project]
name = "portfolio-api"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "asyncpg",
    "psycopg2-binary>=2.9.12,<3.0.0",
    "pydantic>=2",
    "pydantic-settings",
    "structlog",
    "httpx",
    "pydantic[email]"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
