[project]
name = "portfolio-api"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.27.0",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "structlog>=24",
    "pydantic[email]"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]
otel = [
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-sqlalchemy",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
